Add prototype scatter plots (with a number of caveats at the moment)
Scatter plots are generated for each threat actor and each ransomware.
It would be nice to generate an overall scatter plot for all entities,
for example binning by first octet of IPv4 for all events.  But it does
not currently do this.

Caveats:
- It only uses plotly, so currently can only generate HTML, not image output
- Blobs are not currently sized
- Currently a blob is generated on the x-axis for bins with zero contents
- Most plots don't contain enough data to be particularly interesting

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 __pycache__
+*.pyc
+settings.py
 cache.obj
 cache.txt
-settings.py
 .hg
 .hgignore
 heatmaps/
 scorecards-actors/
 scorecards-ransomware/
-*.pyc
+scatter-plot-actors/
+scatter-plot-ransomware/
